New Project App - Task

--- a/AppMAUIGallery/AppMAUIGallery.csproj
+++ b/AppMAUIGallery/AppMAUIGallery.csproj
@@ -43,8 +43,7 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 	</PropertyGroup>
 	
-	<Target Name="_RemoveLinuxFrameworkReferences"
-		AfterTargets="ProcessFrameworkReferences">
+	<Target Name="_RemoveLinuxFrameworkReferences" AfterTargets="ProcessFrameworkReferences">
 		<ItemGroup>
 			<_ProblematicRIDs Include="linux-bionic-arm;linux-bionic-arm64;linux-bionic-x86;linux-bionic-arm64" />
 			<PackageDownload Remove="Microsoft.NETCore.App.Runtime.%(_ProblematicRIDs.Identity)" />
