Accessability (new update)

--- a/AppMAUIGallery/AppMAUIGallery.csproj
+++ b/AppMAUIGallery/AppMAUIGallery.csproj
@@ -83,6 +83,9 @@
 	  <Compile Update="Views\Shells\AppShell.xaml.cs">
 	    <DependentUpon>AppShell.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="Views\Shells\Pages\Page01Step01.xaml.cs">
+	    <DependentUpon>Page01Step01.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\Shells\Pages\Page04.xaml.cs">
 	    <DependentUpon>Page04.xaml</DependentUpon>
 	  </Compile>
@@ -99,6 +102,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Resources\Styles\LightTheme.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Accessability\AccessabilityPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\Animations\BasicAnimation.xaml">
@@ -239,7 +245,16 @@
 	  <MauiXaml Update="Views\Shells\Pages\Page01.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\Shells\Pages\Page01Step02.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Shells\Pages\Page01Step01.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\Shells\Pages\Page02.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Shells\Pages\Page02Step01WithParameters.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\Shells\Pages\Page03.xaml">
