--- a/AppShoppingCenter/AppShoppingCenter.csproj
+++ b/AppShoppingCenter/AppShoppingCenter.csproj
@@ -51,7 +51,6 @@
 		
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -71,15 +70,40 @@
 
 	<ItemGroup>
 	  <Folder Include="Models\" />
-	  <Folder Include="ViewModels\" />
-	  <Folder Include="Views\Cinema\" />
-	  <Folder Include="Views\Tickets\" />
-	  <Folder Include="Views\Stores\" />
-	  <Folder Include="Views\Restaurants\" />
+	  <Folder Include="Libraries\" />
+	  <Folder Include="ViewModels\Authentications\" />
+	  <Folder Include="ViewModels\Cinemas\" />
+	  <Folder Include="ViewModels\Restaurants\" />
+	  <Folder Include="ViewModels\Tickets\" />
+	  <Folder Include="Views\Authentications\" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\AppShoppingCenter.Models\AppShoppingCenter.Models.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Resources\Styles\ExplicitStyles.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Cinemas\ListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Restaurants\ListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Stores\DetailPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Stores\ListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Tickets\ListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Tickets\ScanPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
