--- a/AppShoppingCenter/AppShoppingCenter.csproj
+++ b/AppShoppingCenter/AppShoppingCenter.csproj
@@ -47,7 +47,7 @@
 		<MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'" Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg_android.svg" Color="#FFFFFF" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#FFFFFF"/>
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#FFFFFF" />
 		
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
@@ -80,7 +80,6 @@
 	  <Folder Include="Models\" />
 	  <Folder Include="Libraries\" />
 	  <Folder Include="ViewModels\Authentications\" />
-	  <Folder Include="ViewModels\Tickets\" />
 	  <Folder Include="Views\Authentications\" />
 	</ItemGroup>
 
@@ -111,6 +110,12 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\Tickets\ListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Tickets\PayPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Tickets\ResultPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\Tickets\ScanPage.xaml">
