Camera Page (Bug Fixed{Camera doesn't work})

--- a/AppShoppingCenter/AppShoppingCenter.csproj
+++ b/AppShoppingCenter/AppShoppingCenter.csproj
@@ -47,7 +47,7 @@
 		<MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'" Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg_android.svg" Color="#FFFFFF" BaseSize="100,100" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#FFFFFF" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#FFFFFF" BaseSize="414,716"/>
 		
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
