--- a/AppTask/AppTask.csproj
+++ b/AppTask/AppTask.csproj
@@ -75,6 +75,9 @@
 	  <MauiXaml Update="Views\AddEditTaskPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\StartPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
