--- a/AppTask/AppTask.csproj
+++ b/AppTask/AppTask.csproj
@@ -46,6 +46,8 @@
 	<ItemGroup>
 		<!-- App Icon -->
 
+		<MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) != 'android'" Include="Resources\AppIcon\appicon.png" ForegroundFile="Resources\AppIcon\appiconfg.png" Color="#FFFFFF" />
+
 		<MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'" Include="Resources\AppIcon\appicon.png" ForegroundFile="Resources\AppIcon\appiconfg_android.png" Color="#FFFFFF" />
 
 		<!-- Splash Screen -->
